# TIL

./: .gitattributes  .gitignore  .gitlab-ci.yml  .htmltest.yml  .pre-commit-config.yaml  NOTICE.txt  Pipfile  README.md  build.sh  cspell.json  launch_jupyter_notebook.sh  poetry.toml  pyproject.toml  requirements.txt  start_auto_build.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
.github/: copilot-instructions.md
logo/design/: note.md
source/: about.rst  bibliography.bib  conf.py  index.rst  license.rst
source/KIcon/: NOTICE.txt  README.md
source/_static/: til-custom.css  til.css
source/development/: index.rst  tools_and_libs.csv  tools_and_libs.rst
source/development/cmake/: index.rst  output_directories_in_build.rst
source/development/cpp/: asio_io_context.rst  catch2_with_mocking.rst  clangd.rst  conan_cmake.rst  favorites.rst  gdb_common.rst  index.rst  library_of_interest.rst  prevent_optimizing_variables.rst  protected_member_of_base_class_objects_other_than_this.rst  read_all_in_file.rst
source/development/cpp/asio/: index.rst
source/development/cpp/build_env/: address_sanitizer_with_valgrind_to_die.rst  ccache.rst  cmake_output_directories_in_build.rst  conan_cmake.rst  index.rst  precompiled_headers.md  sanitizer.rst  vcpkg.rst  vs_exception_handling.rst
source/development/cpp/catch2/: index.rst
source/development/cpp/eigen/: index.rst  prevent_memory_allocation.md
source/development/cpp/etc/: address_sanitizer_with_valgrind_to_die.rst  callgrind.rst  index.rst  libsegfault.rst  sanitizer.rst
source/development/cpp/lang/: index.rst  protected_member_of_base_class_objects_other_than_this.rst
source/development/cpp/lib_etc/: backward-cpp.rst  index.rst
source/development/cpp/networking/: index.rst  shm_stream.md  shm_stream.rst  shm_stream_result_parser.py
source/development/cpp/pybind11/: index.rst  rdynamic.rst  require_python_shared.rst
source/development/cpp/serialization/: index.rst
source/development/docker/: apt_repository.rst  docker_hub_testing.rst  hadolint.rst  index.rst  limit_total_resource_usage.md  remove_none.rst  use_remote_daemon.rst  xz_not_installed.rst
source/development/etc/: clock-cycles-reference.md  collision_of_random_integers.ipynb  cspell.rst  free-fem.md  fwupd.md  hsl_color_space.ipynb  htmltest.md  index.rst  response_time_limit.rst  ssh-server-in-ubuntu.md  svg-to-pdf.rst  ubuntu-kernel-low-latency-configuration.md  ubuntu-releases.md  xrdp.md
source/development/git/: ignore_tracked_file_change.rst  index.rst  pre_commit.rst  remove_merged_branches.rst  use_gpg_key.rst
source/development/plantuml/: index.rst
source/development/python/: aiohttp.rst  bigfloat.rst  cython.ipynb  index.rst  jinja.rst  kivy.rst  mpmath.ipynb  pipenv.rst  plotly.ipynb  plotly.rst  pyenv.rst  shebang.rst
source/development/security_network/: clamav.rst  index.rst
source/development/sphinx/: code.rst  collapsible-blocks.md  environment.rst  index.rst  math.rst  plantuml.rst  plotting.ipynb  plotting.rst
source/development/tex/: index.rst  install.rst  latexindent.rst  prime_for_differentiation.rst  space-of-mid-in-set.md
source/development/vscode/: devcontainer-wsl-storage.rst  gdb-in-devcontainer.rst  gpg-in-devcontainer.rst  index.rst  non-root-user-in-devcontainer.md  setting_for_large_workspace.rst
source/development/web/: index.rst  jinja.rst
source/etc/: index.rst  too_high_cpu_temperature.rst
source/internal/: index.rst  test-markdown.md  test-nbsphinx.ipynb  test-notebook.ipynb  test-page.rst
source/music/: index.rst
source/music/dorico/: auftakt.md  grand_piano_config.md  hide_pedal_marks.md  index.rst  score_styles.md  shortcuts_in_write_mode.md
source/science/: collision_of_random_integers.ipynb  collision_of_random_integers.rst  hsl_color_space.ipynb  hsl_color_space.rst  index.rst
source/security/: csrf.rst  index.rst
source/security_network/: get_socket_info.rst  index.rst
source/security_network/openssl/: diffie_hellman.rst  index.rst  sample_tls_cert.rst  test_client_server.rst
til_utils/: __init__.py  plot_common.py
(+64 files in other folders)
