[tool.poetry]
name = "til"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Sphinx and its Extensions, Themes
sphinx = "^8.2.3"
sphinxcontrib-plantuml = "^0.31"
sphinxext-opengraph = "^0.13.0"
sphinxcontrib-bibtex = "^2.6.5"
sphinx-orange-book-theme = "^0.16.0"
myst-parser = "^4.0.1"
myst-nb = "^1.3.0"
sphinxcontrib-trimblank = "^1.0.3"
sphinx-togglebutton = "^0.3.2"
# Plotting
numpy = "^2.3.3"
pandas = "^2.3.3"
xarray = "^2025.9.1"
plotly = "^6.3.0"
# Jupyter
jupyterlab = "^4.4.9"
ipywidgets = "^8.1.7"
ipython = "^9.6.0"
ipykernel = "^6.30.1"
cython = "^3.1.4"
# Others
msgpack = "^1.1.1"
mpmath = "^1.3.0"
# setuptools is required for sphinxcontrib-bibtex
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.9.0"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
