[project]
name = "til"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Kenta Kabashima", email = "kenta_program37@hotmail.co.jp" },
]
requires-python = ">=3.12,<3.14"

dependencies = [
    # Sphinx and its Extensions, Themes
    "sphinx >=8.2.3,<9.0.0",
    "sphinxcontrib-plantuml >=0.31,<0.32.0",
    "sphinxext-opengraph >=0.13.0,<0.14.0",
    "sphinxcontrib-bibtex >=2.6.5,<3.0.0",
    "sphinx-orange-book-theme >=0.16.0,<0.17.0",
    "myst-parser >=4.0.1,<5.0.0",
    "myst-nb >=1.3.0,<2.0.0",
    "sphinxcontrib-trimblank >=1.0.3,<2.0.0",
    "sphinx-togglebutton >=0.3.2,<0.4.0",
    # Plotting
    "numpy >=2.4.0,<3.0.0",
    "pandas >=2.3.3,<3.0.0",
    "xarray >=2025.12.0,<2026.0.0",
    "plotly >=6.5.0,<7.0.0",
    # Jupyter
    "jupyterlab >=4.5.1,<5.0.0",
    "ipywidgets >=8.1.8,<9.0.0",
    "ipython >=9.8.0,<10.0.0",
    "ipykernel >=7.1.0,<8.0.0",
    "cython >=3.2.3,<4.0.0",
    # Others
    "msgpack >=1.1.2,<2.0.0",
    "mpmath >=1.3.0,<2.0.0",
    # setuptools is required for sphinxcontrib-bibtex
    "setuptools >=80.9.0,<81.0.0",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^25.12.0"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
package-mode = false
packages = []
